fixed navbar to be visible all the way to the end

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -30,8 +30,10 @@
 }
 
 .topnav {
-position: sticky;
+position: fixed;
+right: 0;
 top: 0;
+z-index: 1;
 
 
 }
